Adding EURUSD change for coinhub api
