# api/docs/swagger/swagger.json
@@ -1,32 +1,8 @@
-// GENERATED BY THE COMMAND ABOVE; DO NOT EDIT
-// This file was generated by swaggo/swag at
-// 2018-10-05 08:54:28.284434686 +0200 CEST m=+0.028483834
-
-package docs
-
-import (
-	"github.com/swaggo/swag"
-)
-
-var doc = `{
-    "swagger": "2.0",
+{
     "info": {
-        "description": "GetTrades",
-        "title": "diadata.org API",
-        "termsOfService": "http://swagger.io/terms/",
-        "contact": {
-            "name": "API Support",
-            "url": "http://www.swagger.io/support",
-            "email": "support@swagger.io"
-        },
-        "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-        },
-        "version": "1.0"
+        "contact": {},
+        "license": {}
     },
-    "host": "api.diadata.org",
-    "basePath": "/",
     "paths": {
         "/kafka/filtersBlock": {
             "get": {
@@ -151,37 +127,6 @@ var doc = `{
                         "schema": {
                             "type": "object",
                             "$ref": "#/definitions/dia.TradesBlock"
-                        }
-                    },
-                    "500": {
-                        "description": "error",
-                        "schema": {
-                            "type": "object",
-                            "$ref": "#/definitions/restApi.APIError"
-                        }
-                    }
-                }
-            }
-        },
-        "/v1/coins": {
-            "get": {
-                "description": "GetCoins",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "dia"
-                ],
-                "summary": "Get coins",
-                "responses": {
-                    "200": {
-                        "description": "success",
-                        "schema": {
-                            "type": "object",
-                            "$ref": "#/definitions/diaApi.Coins"
                         }
                     },
                     "500": {
@@ -562,6 +507,17 @@ var doc = `{
                 }
             }
         },
+        "diaApi.Change": {
+            "type": "object",
+            "properties": {
+                "eurusd": {
+                    "type": "number"
+                },
+                "eurusdyesterday": {
+                    "type": "number"
+                }
+            }
+        },
         "diaApi.Coin": {
             "type": "object",
             "properties": {
@@ -588,17 +544,6 @@ var doc = `{
                 }
             }
         },
-        "diaApi.Coins": {
-            "type": "object",
-            "properties": {
-                "coins": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/diaApi.Coin"
-                    }
-                }
-            }
-        },
         "diaApi.Pairs": {
             "type": "object",
             "properties": {
@@ -613,6 +558,10 @@ var doc = `{
         "diaApi.SymbolDetails": {
             "type": "object",
             "properties": {
+                "change": {
+                    "type": "object",
+                    "$ref": "#/definitions/diaApi.Change"
+                },
                 "coin": {
                     "type": "object",
                     "$ref": "#/definitions/diaApi.Coin"
@@ -660,13 +609,4 @@ var doc = `{
             }
         }
     }
-}`
-
-type s struct{}
-
-func (s *s) ReadDoc() string {
-	return doc
-}
-func init() {
-	swag.Register(swag.Name, &s{})
 }
